[project]
name = "vantron-collectd-support"
version = "0.0.0"
description = ""
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.16"
dependencies = [
    "ha-mqtt-discoverable @ git+https://github.com/shyndman/ha-mqtt-discoverable.git@main",
    "pydantic (>=2.10.6,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "stringcase (>=1.2.0,<2.0.0)",
]

[project.scripts]
publish-discovery-topics = "vantron_collectd_support.mqtt.hass:publish_entity_discovery"
install-collectd-plugin = "vantron_collectd_support.collectd.install:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
stubPath = "typings/"

[tool.pre-commit]
default_install_hook_types = ["pre-commit"]
